# denote

./: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: denote-ci.yml  denote-release.yml
docs/: release-signing.md
scripts/: apply-release-version.mjs  create-android-release-keystore.ps1  create-windows-signing-certificate.ps1  llm-smoke.mjs  release-lib.d.mts  release-lib.mjs  release.mjs  sign-windows-self-signed.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/ask/: askEngine.ts
src/cards/: draftGenerator.ts  schemas.ts
src/chunking/: paragraphChunker.ts
src/main/: main.cjs
src/preload/: preload.cjs
src/providers/: notionAsk.cjs  notionProvider.ts
src/renderer/: index.html  renderer.js  styles.css
src/renderer-app/: index.html
src/renderer-app/src/: App.tsx  main.tsx  styles.css  types.ts
src/renderer-app/src/components/: Combobox.tsx  (+1 more)
src/renderer/assets/: app.js  index.css
src/retrieval/: rrf.ts
src/samples/: sampleCards.ts  sampleSeeder.ts
src/settings/: settingsStore.ts
src/storage/: cardStore.ts
tests/: askEngine.test.ts  askUiStress.test.ts  cardStore.test.ts  draftGenerator.test.ts  format.test.ts  mainSource.test.ts  notionAsk.test.ts  notionProvider.test.ts  packaging.test.ts  paragraphChunker.test.ts  preloadSource.test.ts  releaseScript.test.ts  rendererHtml.test.ts  rendererSource.test.ts  rrf.test.ts  sampleCards.test.ts  sampleSeeding.test.ts  schemas.test.ts  settingsStore.test.ts  tauriSource.test.ts
tests/smoke/: localWorkspaceSmoke.mjs
(+9 files in other folders)
