[package]
name = "denote"
version = "0.1.9"
description = "Desktop-first local AI knowledge tool."
authors = ["Dennis"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "denote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["sync", "time"] }
toml = "0.9"
url = "2"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
